force-app/main/default/objects/Region_Map__c/Region_Map__c.object-meta.xml
<CustomObject>
    <label>Region Map</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Region Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>