force-app/main/default/objects/Region_Map__c/fields/Circle_Name__c.field-meta.xml
<CustomField>
    <fullName>Circle_Name__c</fullName>
    <label>Circle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>