force-app/main/default/objects/Region_Map__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <label>Office Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>