force-app/main/default/objects/Region_Map__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILM</fullName>
                <label>Industrial Laundry Machine</label>
            </value>
            <value>
                <fullName>IDW</fullName>
                <label>Industrial Dishwasher</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>