force-app/main/default/objects/Region_Map__c/fields/Region_Owner__c.field-meta.xml
<CustomField>
    <fullName>Region_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Region_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>