force-app/main/default/objects/Region_Map__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Educational Institutions</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Laundromats</fullName>
            </value>
            <value>
                <fullName>Organization/Entity</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organization/NGO</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>HNI</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>List Of Ministries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>