force-app/main/default/objects/Region_Map__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <externalId>true</externalId>
    <label>Zipcode</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>